# auth-service

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
migrations/: env.py
migrations/versions/: 4698e447285d_update_user_table_create_token_type_and_.py  781ec0795c8b_update_user_token_verification_table.py  7f120e9b778f_create_a_baseline_migrations.py
src/auth_service/: main.py
src/auth_service/core/: config.py  dependencies.py  secutiry.py
src/auth_service/core/security/: codes.py
src/auth_service/db/: session.py
src/auth_service/infra/rabbitmq/: publisher.py
src/auth_service/modules/auth/: models.py  repository.py  router.py  schemas.py  service.py
src/auth_service/modules/auth/handlers/: on_user_created.py
